# pyphonenumber

./: Cargo.toml  README.md
benchmark/: benchmark.py  gen.py
src/: lib.rs  phone_number.rs  utils.rs
